UPDATE css, html
ADD ReadME

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <footer>
   <p><small>
-    ©2023 David Radjai
+    <script>document.write("David Radjai © ", new Date().getFullYear())</script>
   </small></p>
 </footer>
 </body>
